<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/icon_logo_splash" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/btn_signup"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/blue_light_main"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/blue_light_main"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:visibility="invisible" />


    <LinearLayout
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sign_up_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sign_up_2"
            android:textColor="@color/blue_light_main" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sign_up_3" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/gray_transparent_box"
            android:padding="15dp"
            android:src="@drawable/icon_user" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/gray_transparent_light_box"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColorHint="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/field_name"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/gray_transparent_box"
            android:padding="15dp"
            android:src="@drawable/icon_lock" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/gray_transparent_light_box"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColorHint="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/field_pass"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/field_code1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_below="@+id/field_name"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/gray_transparent_box"
                android:padding="15dp"
                android:src="@drawable/icon_code" />

            <EditText
                android:id="@+id/edt_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/gray_transparent_light_box"
                android:hint="@string/hint_code"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColorHint="@android:color/white" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_code"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:scaleType="fitXY" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_code"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:visibility="invisible">


        <demo.example.com.tvc_erp.ui.view.CheckboxLogin
            android:id="@+id/chk_remember"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/icon_remember" />

        <TextView
            android:id="@+id/txt_remember"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="Remember me"
            android:textSize="15sp" />

    </LinearLayout>


</RelativeLayout>