<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_news"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="demo.example.com.tvc_erp.ui.activity.CreateNewsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edt_news_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/black_border_box"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/access_group"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_news_taskmaster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="40dp"
                    android:background="@color/white"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp" />

                <ImageView
                    android:id="@+id/img_news_search_taskmaster"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/icon_search"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edt_news_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/black_border_box"
                android:gravity="left|top"
                android:paddingLeft="5dp"
                android:paddingTop="5dp" />

            <LinearLayout
                android:id="@+id/ll_attach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgbt_attach"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_attachment" />

                <TextView
                    android:id="@+id/txt_attachments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/attachments"
                    android:textColor="@color/blue_light_main" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rw_images"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_news_post"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_border_box"
                android:text="@string/post"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_news_cancel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_solid_box"
                android:text="@string/close"
                android:textColor="@color/blue_light_main" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
